chore(hubble): align core versions and style
1. replace hardcoded hg-pd-client and hugegraph-core versions with a unified `hugegraph.core.version` (1.7.0) property.
2. update root `lombok.version` from 1.18.8 to 1.18.32 for newer toolchain compatibility.
3. migrate `-Xmaxerrs` compiler configuration to `compilerArgs` in `hubble-be/pom.xml`.
4. clean up wildcard imports, spacing, and line wrapping across hubble-be controllers, services, entities, and utilities for consistent code style.